--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -208,6 +208,32 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="recodeON">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>480</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>记录数据</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="recodeOFF">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>480</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>停止记录</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
