--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -234,6 +234,19 @@
      <string>停止记录</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="startplotON">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>520</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>开始画图</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
